adding support for HMAC with MD5, SHA1, SHA256/384/512 and MD5, RSA with MD5 in xmlsec-mscrypto

--- a/src/mscrypto/Makefile.am
+++ b/src/mscrypto/Makefile.am
@@ -25,6 +25,7 @@ libxmlsec1_mscrypto_la_SOURCES =\
 	ciphers.c \
 	crypto.c \
 	digests.c \
+	hmac.c \
 	keysstore.c \
 	kt_rsa.c \
 	signatures.c \
