--- a/src/gnutls/Makefile.am
+++ b/src/gnutls/Makefile.am
@@ -27,7 +27,6 @@ libxmlsec1_gnutls_la_SOURCES =\
 	kw_aes.c \
 	kw_des.c \
 	symkeys.c \
-	asymkeys.c \
 	globals.h \
 	$(NULL)
 
@@ -35,11 +34,13 @@ if SHAREDLIB_HACK
 libxmlsec1_gnutls_la_SOURCES += ../strings.c
 endif
 
+# xmlsec-gnutls library requires xmlsec-gcrypt
 libxmlsec1_gnutls_la_LIBADD = \
 	$(GNUTLS_LIBS) \
 	$(LIBXSLT_LIBS) \
 	$(LIBXML_LIBS) \
 	../libxmlsec1.la \
+	../gcrypt/libxmlsec1-gcrypt.la \
 	$(NULL)
 
 libxmlsec1_gnutls_la_DEPENDENCIES = \
