--- a/configure.in
+++ b/configure.in
@@ -25,6 +25,11 @@ AM_INIT_AUTOMAKE([1.7 tar-ustar])
 AC_CONFIG_HEADERS([config.h])
 AM_MAINTAINER_MODE
 
+# Support silent build rules, requires at least automake-1.11. Disable
+# by either passing --disable-silent-rules to configure or passing V=1
+# to make
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
+
 dnl
 dnl Check the environment
 dnl
