--- a/configure.in
+++ b/configure.in
@@ -1325,7 +1325,7 @@ AC_SUBST(XMLSEC_NO_AES)
 dnl ==========================================================================
 dnl See do we need GOST support
 dnl ==========================================================================
-AC_MSG_CHECKING(for GOST support) 
+AC_MSG_CHECKING(for GOST support)
 AC_ARG_ENABLE(gost,   [  --enable-gost           enable GOST support (no)])
 if test "z$enable_gost" != "zyes" ; then
     XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_NO_GOST=1"
@@ -1334,9 +1334,27 @@ if test "z$enable_gost" != "zyes" ; then
 else
     XMLSEC_NO_GOST="0"
     AC_MSG_RESULT(yes)
-fi    
+fi
 AM_CONDITIONAL(XMLSEC_NO_GOST, test "z$XMLSEC_NO_GOST" = "z1")
 AC_SUBST(XMLSEC_NO_GOST)
+
+
+dnl ==========================================================================
+dnl See do we need GOST2012 support
+dnl ==========================================================================
+AC_MSG_CHECKING(for EXPERMIENTAL GOST2012 support)
+AC_ARG_ENABLE(gost,   [  --enable-gost2012       enable EXPERMIENTAL GOST2012 support (no)])
+if test "z$enable_gost2012" != "zyes" ; then
+    XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_NO_GOST2012=1"
+    XMLSEC_NO_GOST2012="1"
+    AC_MSG_RESULT(no)
+else
+    XMLSEC_NO_GOST2012="0"
+    AC_MSG_RESULT(yes)
+fi
+AM_CONDITIONAL(XMLSEC_NO_GOST2012, test "z$XMLSEC_NO_GOST2012" = "z1")
+AC_SUBST(XMLSEC_NO_GOST2012)
+
 
 dnl ==========================================================================
 dnl See do we need XMLDSig support
