enable per-crypto checks

--- a/Makefile.am
+++ b/Makefile.am
@@ -88,31 +88,35 @@ docs-man:
 check: check-all check-info
 
 check-all: $(TEST_APP) 
-	@($(PRECHECK_COMMANDS) && \
 	for crypto in $(CHECK_CRYPTO_LIST) ; do \
-	    echo "=================== Checking xmlsec-$$crypto =================================" && \
-	    $(SHELL) ./tests/testrun.sh \
-	        $(ABS_SRCDIR)/tests/testKeys.sh \
-	        $$crypto \
-	        $(ABS_SRCDIR)/tests \
-	        $(ABS_BUILDDIR)/$(TEST_APP) der \
-	    && \
-	    $(SHELL) ./tests/testrun.sh \
-	        $(ABS_SRCDIR)/tests/testDSig.sh \
-	        $$crypto \
-	        $(ABS_SRCDIR)/tests \
-	        $(ABS_BUILDDIR)/$(TEST_APP) \
-	        der \
-	    && \
-	    $(SHELL) ./tests/testrun.sh \
-	        $(ABS_SRCDIR)/tests/testEnc.sh \
-	        $$crypto \
-	        $(ABS_SRCDIR)/tests \
-	        $(ABS_BUILDDIR)/$(TEST_APP) \
-	        der \
-	    ; \
-	done; )
+		make check-crypto-$$crypto ; \
+	done
 
+check-crypto-%: $(TEST_APP) 
+	@($(PRECHECK_COMMANDS) && \
+    echo "=================== Checking xmlsec-$* =================================" && \
+    $(SHELL) ./tests/testrun.sh \
+        $(ABS_SRCDIR)/tests/testKeys.sh \
+        $* \
+        $(ABS_SRCDIR)/tests \
+        $(ABS_BUILDDIR)/$(TEST_APP) der \
+    && \
+    $(SHELL) ./tests/testrun.sh \
+        $(ABS_SRCDIR)/tests/testDSig.sh \
+        $* \
+        $(ABS_SRCDIR)/tests \
+        $(ABS_BUILDDIR)/$(TEST_APP) \
+        der \
+    && \
+    $(SHELL) ./tests/testrun.sh \
+        $(ABS_SRCDIR)/tests/testEnc.sh \
+        $* \
+        $(ABS_SRCDIR)/tests \
+        $(ABS_BUILDDIR)/$(TEST_APP) \
+        der \
+    ; \	
+	)
+	
 check-info:
 	@echo "---------------------------- ATTENTION -----------------------------------"
 	@echo "--- Some of the tests use resources located on external HTTP servers.  ---"
