--- a/configure.in
+++ b/configure.in
@@ -137,7 +137,7 @@ if test "z$shrext" == "z" ; then
 fi
 
 dnl ==========================================================================
-dnl Check for __FUNCTION__ or __FUNCTION__
+dnl Check for __FUNCTION__ or __func__
 dnl ==========================================================================
 AC_MSG_CHECKING(for __FUNCTION__ or __func__)
 AC_COMPILE_IFELSE([AC_LANG_PROGRAM([],
@@ -150,7 +150,7 @@ AC_COMPILE_IFELSE([AC_LANG_PROGRAM([],
 	[ac_func_exists=no])
 if test "z$ac_function_exists" = "zyes" ; then
 	AC_MSG_RESULT(__FUNCTION__)
-	XMLSEC_DEFINES="$XMLSEC_DEFINES -D__XMLSEC_FUNCTION__=__FUNCTION__"
+	XMLSEC_DEFINES="$XMLSEC_DEFINES -D__XMLSEC_FUNCTION__='__extension__ __FUNCTION__'"
 elif test "z$ac_func_exists" = "zyes" ; then 
 	AC_MSG_RESULT(__func__)
 	XMLSEC_DEFINES="$XMLSEC_DEFINES -D__XMLSEC_FUNCTION__=__func__"
@@ -375,6 +375,12 @@ elif test "z$with_openssl" != "z" ; then
     OPENSSL_FOUND="yes"
 elif test "z$PKGCONFIG_FOUND" = "zyes" ; then
     if test "z$OPENSSL_VERSION" = "z" ; then
+        PKG_CHECK_MODULES(OPENSSL, openssl >= 1.1.0,
+            [OPENSSL_VERSION="1.1.0"],
+            [OPENSSL_VERSION=""])
+    fi
+
+    if test "z$OPENSSL_VERSION" = "z" ; then
         PKG_CHECK_MODULES(OPENSSL, openssl >= 1.0.0,
             [OPENSSL_VERSION="1.0.0"],
             [OPENSSL_VERSION=""])
@@ -393,7 +399,7 @@ elif test "z$PKGCONFIG_FOUND" = "zyes" ; then
     fi
 
     if test "z$OPENSSL_VERSION" != "z" ; then
-	OPENSSL_FOUND="yes"
+        OPENSSL_FOUND="yes"
     fi
 fi
 
@@ -439,6 +445,19 @@ if test "z$OPENSSL_FOUND" = "zyes" -a "z$OPENSSL_VERSION" = "z" ; then
     dnl Check the OpenSSL version    
     OLD_CPPFLAGS=$CPPFLAGS
     CPPFLAGS="$OPENSSL_CFLAGS"
+
+    if test "z$OPENSSL_VERSION" = "z" ; then
+        AC_EGREP_CPP(yes,[
+            #include <openssl/opensslv.h>
+        #if OPENSSL_VERSION_NUMBER >= 0x10100000L
+        yes
+        #endif
+    ],[
+        OPENSSL_VERSION="1.1.0"
+    ],[
+        OPENSSL_VERSION=""
+    ])
+    fi
 
     if test "z$OPENSSL_VERSION" = "z" ; then
         AC_EGREP_CPP(yes,[
@@ -494,10 +513,13 @@ fi
 if test "z$OPENSSL_FOUND" = "zyes" ; then
     XMLSEC_NO_OPENSSL="0"
     if test "z$OPENSSL_VERSION" = "z0.9.8" ; then
-	OPENSSL_CFLAGS="$OPENSSL_CFLAGS -DXMLSEC_OPENSSL_098=1 -DXMLSEC_NO_ECDSA=1"
-    fi    
+	OPENSSL_CFLAGS="$OPENSSL_CFLAGS -DXMLSEC_OPENSSL_098=1 -DXMLSEC_NO_ECDSA=1 -DXMLSEC_NO_SHA256=1"
+    fi
     if test "z$OPENSSL_VERSION" = "z1.0.0" ; then
 	OPENSSL_CFLAGS="$OPENSSL_CFLAGS -DXMLSEC_OPENSSL_100=1"
+    fi    
+    if test "z$OPENSSL_VERSION" = "z1.1.0" ; then
+    OPENSSL_CFLAGS="$OPENSSL_CFLAGS -DXMLSEC_OPENSSL_110=1"
     fi    
     OPENSSL_CFLAGS="$OPENSSL_CFLAGS -DXMLSEC_CRYPTO_OPENSSL=1"
     XMLSEC_CRYPTO_LIST="$XMLSEC_CRYPTO_LIST openssl"
