convert openssl/signature.c (disable dsa and ecdsa for now) to OpenSSL 1.1.0

--- a/configure.in
+++ b/configure.in
@@ -519,7 +519,7 @@ if test "z$OPENSSL_FOUND" = "zyes" ; then
 	OPENSSL_CFLAGS="$OPENSSL_CFLAGS -DXMLSEC_OPENSSL_100=1"
     fi    
     if test "z$OPENSSL_VERSION" = "z1.1.0" ; then
-    OPENSSL_CFLAGS="$OPENSSL_CFLAGS -DXMLSEC_OPENSSL_110=1"
+    OPENSSL_CFLAGS="$OPENSSL_CFLAGS -DXMLSEC_OPENSSL_110=1 -DXMLSEC_NO_ECDSA=1 -DXMLSEC_NO_DSA=1"
     fi    
     OPENSSL_CFLAGS="$OPENSSL_CFLAGS -DXMLSEC_CRYPTO_OPENSSL=1"
     XMLSEC_CRYPTO_LIST="$XMLSEC_CRYPTO_LIST openssl"
