tweak memcheck test

--- a/Makefile.am
+++ b/Makefile.am
@@ -157,7 +157,10 @@ check-enc: $(TEST_APP)
 memcheck-res:
 	@grep -i 'ERROR SUMMARY' /tmp/*.log | sed 's/.*==.*== *//' | sort -u
 	@grep -i 'in use at exit' /tmp/*.log | sed 's/.*==.*== *//' | sort -u
-	@grep -i 'total heap usage' /tmp/*.log | sed 's/.*==.*== *//' | sort -u
+	@grep -i 'definitely lost:' /tmp/*.log | sed 's/.*==.*== *//' | sort -u
+	@grep -i 'indirectly lost:' /tmp/*.log | sed 's/.*==.*== *//' | sort -u
+	@grep -i 'possibly lost:' /tmp/*.log | sed 's/.*==.*== *//' | sort -u
+	@grep -i 'still reachable:' /tmp/*.log | sed 's/.*==.*== *//' | sort -u
 
 memcheck: $(TEST_APP)
 	@(export DEBUG_MEMORY=1 && $(MAKE) check && $(MAKE) memcheck-res)
